// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiIcon is rendered 1`] = `
<svg
  aria-label="aria-label"
  class="euiIcon testClass1 testClass2 euiIcon--medium euiIcon--default"
  data-test-subj="test subject string"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders size l 1`] = `
<svg
  class="euiIcon euiIcon--large euiIcon--default"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders size m 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders size original 1`] = `
<svg
  class="euiIcon euiIcon--default"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders size xl 1`] = `
<svg
  class="euiIcon euiIcon--xLarge euiIcon--default"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders size xxl 1`] = `
<svg
  class="euiIcon euiIcon--xxLarge euiIcon--default"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders type apmApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    apm app icon
  </title>
  <use
    href="#app_apm"
  />
</svg>
`;

exports[`EuiIcon renders type apps 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    apps icon
  </title>
  <use
    href="#apps"
  />
</svg>
`;

exports[`EuiIcon renders type arrowDown 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    arrow down icon
  </title>
  <use
    href="#arrow_down"
  />
</svg>
`;

exports[`EuiIcon renders type arrowLeft 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    arrow left icon
  </title>
  <use
    href="#arrow_left"
  />
</svg>
`;

exports[`EuiIcon renders type arrowRight 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    arrow right icon
  </title>
  <use
    href="#arrow_right"
  />
</svg>
`;

exports[`EuiIcon renders type arrowUp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    arrow up icon
  </title>
  <use
    href="#arrow_up"
  />
</svg>
`;

exports[`EuiIcon renders type bolt 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    bolt icon
  </title>
  <use
    href="#bolt"
  />
</svg>
`;

exports[`EuiIcon renders type boxesHorizontal 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    boxes horizontal icon
  </title>
  <use
    href="#boxes_horizontal"
  />
</svg>
`;

exports[`EuiIcon renders type boxesVertical 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    boxes vertical icon
  </title>
  <use
    href="#boxes_vertical"
  />
</svg>
`;

exports[`EuiIcon renders type brush 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    brush icon
  </title>
  <use
    href="#brush"
  />
</svg>
`;

exports[`EuiIcon renders type bullseye 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    bullseye icon
  </title>
  <use
    href="#bullseye"
  />
</svg>
`;

exports[`EuiIcon renders type check 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    check icon
  </title>
  <use
    href="#check"
  />
</svg>
`;

exports[`EuiIcon renders type clock 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    clock icon
  </title>
  <use
    href="#clock"
  />
</svg>
`;

exports[`EuiIcon renders type console 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    console icon
  </title>
  <use
    href="#console"
  />
</svg>
`;

exports[`EuiIcon renders type controlsHorizontal 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    controls horizontal icon
  </title>
  <use
    href="#controls_horizontal"
  />
</svg>
`;

exports[`EuiIcon renders type controlsVertical 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    controls vertical icon
  </title>
  <use
    href="#controls_vertical"
  />
</svg>
`;

exports[`EuiIcon renders type cross 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    cross icon
  </title>
  <use
    href="#cross"
  />
</svg>
`;

exports[`EuiIcon renders type dashboardApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    dashboard app icon
  </title>
  <use
    href="#app_dashboard"
  />
</svg>
`;

exports[`EuiIcon renders type devToolsApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    dev tools app icon
  </title>
  <use
    href="#app_devtools"
  />
</svg>
`;

exports[`EuiIcon renders type discoverApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    discover app icon
  </title>
  <use
    href="#app_discover"
  />
</svg>
`;

exports[`EuiIcon renders type document 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    document icon
  </title>
  <use
    href="#document"
  />
</svg>
`;

exports[`EuiIcon renders type dot 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    dot icon
  </title>
  <use
    href="#dot"
  />
</svg>
`;

exports[`EuiIcon renders type empty 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    empty icon
  </title>
  <use
    href="#empty"
  />
</svg>
`;

exports[`EuiIcon renders type faceHappy 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    face happy icon
  </title>
  <use
    href="#face_happy"
  />
</svg>
`;

exports[`EuiIcon renders type faceSad 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    face sad icon
  </title>
  <use
    href="#face_sad"
  />
</svg>
`;

exports[`EuiIcon renders type fullScreen 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    full screen icon
  </title>
  <use
    href="#full_screen"
  />
</svg>
`;

exports[`EuiIcon renders type gear 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    gear icon
  </title>
  <use
    href="#gear"
  />
</svg>
`;

exports[`EuiIcon renders type graphApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    graph app icon
  </title>
  <use
    href="#app_graph"
  />
</svg>
`;

exports[`EuiIcon renders type grid 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    grid icon
  </title>
  <use
    href="#grid"
  />
</svg>
`;

exports[`EuiIcon renders type help 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    help icon
  </title>
  <use
    href="#help"
  />
</svg>
`;

exports[`EuiIcon renders type link 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    link icon
  </title>
  <use
    href="#link"
  />
</svg>
`;

exports[`EuiIcon renders type list 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    list icon
  </title>
  <use
    href="#list"
  />
</svg>
`;

exports[`EuiIcon renders type listAdd 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    list add icon
  </title>
  <use
    href="#list_add"
  />
</svg>
`;

exports[`EuiIcon renders type lock 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    lock icon
  </title>
  <use
    href="#lock"
  />
</svg>
`;

exports[`EuiIcon renders type loggingApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logging app icon
  </title>
  <use
    href="#app_logging"
  />
</svg>
`;

exports[`EuiIcon renders type logoBeats 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo beats icon
  </title>
  <use
    href="#logo_beats"
  />
</svg>
`;

exports[`EuiIcon renders type logoCloud 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo cloud icon
  </title>
  <use
    href="#logo_cloud"
  />
</svg>
`;

exports[`EuiIcon renders type logoElastic 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo elastic icon
  </title>
  <use
    href="#logo_elastic"
  />
</svg>
`;

exports[`EuiIcon renders type logoElasticSearch 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo elastic search icon
  </title>
  <use
    href="#logo_elastic_search"
  />
</svg>
`;

exports[`EuiIcon renders type logoElasticStack 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo elastic stack icon
  </title>
  <use
    href="#logo_elastic_stack"
  />
</svg>
`;

exports[`EuiIcon renders type logoGmail 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo gmail icon
  </title>
  <use
    href="#logo_gmail"
  />
</svg>
`;

exports[`EuiIcon renders type logoKibana 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo kibana icon
  </title>
  <use
    href="#logo_kibana"
  />
</svg>
`;

exports[`EuiIcon renders type logoLogstash 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo logstash icon
  </title>
  <use
    href="#logo_logstash"
  />
</svg>
`;

exports[`EuiIcon renders type logoSlack 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo slack icon
  </title>
  <use
    href="#logo_slack"
  />
</svg>
`;

exports[`EuiIcon renders type logoWebhook 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo webhook icon
  </title>
  <use
    href="#logo_webhook"
  />
</svg>
`;

exports[`EuiIcon renders type logoXpack 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    logo xpack icon
  </title>
  <use
    href="#logo_xpack"
  />
</svg>
`;

exports[`EuiIcon renders type machineLearningApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    machine learning app icon
  </title>
  <use
    href="#app_ml"
  />
</svg>
`;

exports[`EuiIcon renders type mapMarker 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    map marker icon
  </title>
  <use
    href="#map_marker"
  />
</svg>
`;

exports[`EuiIcon renders type monitoringApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    monitoring app icon
  </title>
  <use
    href="#app_monitoring"
  />
</svg>
`;

exports[`EuiIcon renders type node 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    node icon
  </title>
  <use
    href="#node"
  />
</svg>
`;

exports[`EuiIcon renders type pencil 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    pencil icon
  </title>
  <use
    href="#pencil"
  />
</svg>
`;

exports[`EuiIcon renders type plusInCircle 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    plus in circle icon
  </title>
  <use
    href="#plus_in_circle"
  />
</svg>
`;

exports[`EuiIcon renders type search 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    search icon
  </title>
  <use
    href="#search"
  />
</svg>
`;

exports[`EuiIcon renders type shard 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    shard icon
  </title>
  <use
    href="#shard"
  />
</svg>
`;

exports[`EuiIcon renders type share 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    share icon
  </title>
  <use
    href="#share"
  />
</svg>
`;

exports[`EuiIcon renders type sortDown 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    sort down icon
  </title>
  <use
    href="#sort_down"
  />
</svg>
`;

exports[`EuiIcon renders type sortUp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    sort up icon
  </title>
  <use
    href="#sort_up"
  />
</svg>
`;

exports[`EuiIcon renders type starEmpty 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    star empty icon
  </title>
  <use
    href="#star_empty"
  />
</svg>
`;

exports[`EuiIcon renders type tear 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    tear icon
  </title>
  <use
    href="#tear"
  />
</svg>
`;

exports[`EuiIcon renders type timelionApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    timelion app icon
  </title>
  <use
    href="#app_timelion"
  />
</svg>
`;

exports[`EuiIcon renders type trash 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    trash icon
  </title>
  <use
    href="#trash"
  />
</svg>
`;

exports[`EuiIcon renders type user 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    user icon
  </title>
  <use
    href="#user"
  />
</svg>
`;

exports[`EuiIcon renders type visualizeApp 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    visualize app icon
  </title>
  <use
    href="#app_visualize"
  />
</svg>
`;

exports[`EuiIcon title defaults to a humanized version of the type 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    dashboard app icon
  </title>
  <use
    href="#app_dashboard"
  />
</svg>
`;

exports[`EuiIcon title is rendered 1`] = `
<svg
  class="euiIcon euiIcon--medium euiIcon--default"
>
  <title>
    a custom title
  </title>
  <use
    href="#search"
  />
</svg>
`;
